# src/core/model/node.go
@@ -1,13 +1,19 @@
 package model
 
 type Node struct {
-	Model
-	Credential string `json:"credential"`
-	PublicIP   string `json:"publicIp"`
+	Name       string `json:"name"`
+	Credential string `json:"Credential"`
+	PublicIP   string `json:"publicIP"`
+	UId        string `json:"uId"`
+	Role       string `json:"role"`
 }
 
-func NewNode() *Node {
+func NewNode(vm VM) *Node {
 	return &Node{
-		Model: Model{Kind: KIND_NODE},
+		Name:       vm.Name,
+		Credential: vm.Credential,
+		PublicIP:   vm.PublicIP,
+		UId:        vm.UId,
+		Role:       vm.Role,
 	}
 }
